--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
-  "name": "nw-demo",
-  "main": "index.html"
+    "name": "cutting-board",
+    "main": "index.html",
+    "window": {
+        "toolbar": true
+    }
 }
